<resources>
    <string name="app_name">Coinly</string>
    <string name="welcome_to_coinly">Welcome to Coinly</string>
    <string name="your_digital_coin_wallet">Your digital coin wallet</string>
    <string name="app_logo">App Logo</string>
    <string name="phone_number">Phone Number</string>
    <string name="mpin">MPIN (4 digits)</string>
    <string name="login">Login</string>
    <string name="forgot_mpin">Forgot MPIN?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_register_here">New User? Register Here</string>
    <string name="invalid_phone">Please enter a valid phone number</string>
    <string name="invalid_mpin">MPIN must be 4 digits</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="invalid_password">Password must be at least 6 characters</string>
    <string name="login_success">Login successful</string>

    <!-- Register page strings -->
    <string name="register_to_coinly">Register to Coinly</string>
    <string name="full_name">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="mi">M.I</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="registration_success">Registration Successful</string>

    <!-- PIN screens strings -->
    <string name="create_pin">Create PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="pin_description">Please create a 4-digit PIN that will be used to secure your account</string>
    <string name="confirm_pin_description">Please re-enter your PIN to confirm</string>
    <string name="pin_edit_description">Please enter your old PIN</string>
    <string name="pin_mismatch">PINs do not match. Please try again.</string>
    <string name="pin_success">PIN successfully created!</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel"</string>
    <string name="confirm">Confirm</string>
    <string name="backspace">Delete</string>
    <string name="fingerprint">Fingerprint</string>

    <!-- Login screen strings -->
    <string name="login_to_account">Login to your account</string>

    <!-- QR Scanner screen strings-->
    <string name="back">Back</string>
    <string name="upload_qr">Upload QR</string>
    <string name="generate_qr">Generate QR</string>
    <string name="use_number">Use Number</string>

    <!-- Profile Screen strings -->
    <string name="profile_name">John C. Doe</string>
    <string name="profile_phone">09123456789</string>
    <string name="birthdate_label">Birthdate</string>
    <string name="birthdate_value">Aug 21, 2002</string>
    <string name="email_label">Email Address</string>
    <string name="email_value">johndoe@gmail.com</string>
    <string name="address_label">Current Address</string>
    <string name="address_value">Kilid sa Jollibee, Talamban, Cebu City, 6000</string>
    <string name="update_account">Update Account Information</string>
</resources>