<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDF9E3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="#F8D77B">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="#FCF8CF" />

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="55dp"
                    android:background="@drawable/profile_image_border"
                    android:padding="2dp"
                    android:src="@drawable/ic_profile" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#F8D77B"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_name"
                        android:textColor="#083248"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_phone"
                        android:textColor="#083248"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthdate_label"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthdate_value"
                    android:textStyle="bold"
                    android:textColor="#083248"
                    android:textSize="16sp"
                    android:layout_marginBottom="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_label"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_value"
                    android:textStyle="bold"
                    android:textColor="#083248"
                    android:textSize="16sp"
                    android:layout_marginBottom="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_label"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_value"
                    android:textStyle="bold"
                    android:textColor="#083248"
                    android:textSize="16sp"
                    android:layout_marginBottom="16dp" />

                <Button
                    android:id="@+id/updateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/update_account"
                    android:backgroundTint="#15253F"
                    android:textColor="#FFF" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:id="@+id/currency_dropdown_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_currency"
                        android:contentDescription="Currency Icon" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="Currency"
                        android:textSize="16sp"
                        android:textColor="#083248"
                        android:textStyle="bold"
                        android:paddingStart="10dp" />

                    <TextView
                        android:id="@+id/currency_selected_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="PHP"
                        android:textSize="16sp"
                        android:textColor="#083248"
                        android:layout_marginEnd="6dp"/>

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@drawable/ic_arrow_right"
                        android:contentDescription="Dropdown Arrow" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/language_dropdown_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/languageIcon"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_language"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="Locked"
                        android:visibility="visible"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="Language"
                        android:textSize="16sp"
                        android:textColor="#083248"
                        android:textStyle="bold"
                        android:paddingStart="10dp" />

                    <TextView
                        android:id="@+id/language_selected_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="English"
                        android:textSize="16sp"
                        android:textColor="#083248"
                        android:layout_marginEnd="6dp"/>

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@drawable/ic_arrow_right"
                        android:contentDescription="Dropdown Arrow" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/help_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/helpIcon"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_help"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="Locked"
                        android:visibility="visible"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="Help"
                        android:textSize="16sp"
                        android:textColor="#083248"
                        android:textStyle="bold"
                        android:paddingLeft="10dp"
                        android:layout_gravity="center_vertical"/>

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@drawable/ic_arrow_right"
                        android:contentDescription="Dropdown Arrow" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Used Points"
                    android:textStyle="bold"
                    android:textColor="#083248"
                    android:textSize="16sp"
                    android:paddingTop="16dp" />

                <ProgressBar
                    android:id="@+id/usedPointsProgress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginTop="5dp"
                    android:progress="45"
                    android:progressDrawable="@drawable/progress_profile_drawable" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Invited Users"
                    android:textStyle="bold"
                    android:textColor="#083248"
                    android:textSize="16sp"
                    android:paddingTop="16dp" />

                <ProgressBar
                    android:id="@+id/invitedUsersProgress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginTop="5dp"
                    android:progress="80"
                    android:progressDrawable="@drawable/progress_profile_drawable" />

                <LinearLayout
                    android:id="@+id/logout_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/logoutIcon"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_logout"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="Locked"
                        android:visibility="visible"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="Log Out"
                        android:textSize="16sp"
                        android:textColor="#083248"
                        android:textStyle="bold"
                        android:paddingLeft="10dp"
                        android:layout_gravity="center_vertical"/>

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@drawable/ic_arrow_right"
                        android:contentDescription="Dropdown Arrow" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.example.coinly.CustomBottomNavigation
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
